php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #47087 Second parameter of mssql_fetch_array() is ignored
Submitted: 2009-01-13 12:35 UTC Modified: 2009-01-20 20:03 UTC
From: vrana@php.net Assigned: kalle (profile)
Status: Closed Package: MSSQL related
PHP Version: 5.3.0alpha3 OS: Windows
Private report: No CVE-ID: None
 [2009-01-13 12:35 UTC] vrana@php.net
Description:
------------
It seems that the result_type parameter of mssql_fetch_array() is always set to MSSQL_BOTH.

Reproduce code:
---------------
<?php
print_r(mssql_fetch_array($result, MSSQL_ASSOC));
?>


Expected result:
----------------
Array
(
    [id] => 1
)


Actual result:
--------------
Array
(
    [0] => 1
    [id] => 1
)


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-01-13 13:29 UTC] kalle@php.net
I'll have a look at it
 [2009-01-20 20:03 UTC] felipe@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 28 23:00:02 2026 UTC