- Fixed bug #47087 (Second parameter of mssql_fetch_array() is ignored)